fix wrap

--- a/src/components/room-info/room-info.scss
+++ b/src/components/room-info/room-info.scss
@@ -6,7 +6,7 @@
   align-items: flex-end;
 
   &__number {
-    max-width: 45%;
+    max-width: 50%;
     word-break: break-word;
   }
 
